# nokia

./: CMakeLists.txt  README.md  README.txt  main.cpp  main.h
algorithms/: Fcfs.cpp  Fcfs.h  PriorityNP.cpp  PriorityNP.h  Process.cpp  Process.h  Roundrobin.cpp  Roundrobin.h
